--- a/less/style.less
+++ b/less/style.less
@@ -91,10 +91,10 @@ a{
     }
 
     .connection-info__btn {
-        padding: 12px 20px;
+        padding: 12px 26px;
         margin-left: auto;
         background: linear-gradient(186.68deg, #FF0000 9.11%, #CE0000 98.12%);
-        border-radius: 17.5px;
+        border-radius: 30px;
         font-weight: bold;
         font-size: 20px;
        
@@ -399,11 +399,15 @@ a{
     text-align: center;
     font-family: Roboto;
 
+    &__img {
+        margin-bottom: 30px;
+    }
     &__header{
         font-style: normal;
         font-weight: bold;
         font-size: 28px;
         color: #0031C4;
+        margin-bottom: 7px;
     }
 
     &__info{
@@ -416,9 +420,9 @@ a{
 }
 
 
-    l.line {
+.line {
         position: relative;
-        margin: 0 auto;
+        margin: 0 auto 16px;
         height: 5px;
         width: 542px;
         background: linear-gradient(180.08deg, #0066FF -8.5%, #00369C 51.46%, #0031C4 130.73%, #018FF6 130.74%);
@@ -472,7 +476,7 @@ a{
     }
 
 .universities {
-    margin-top: 140px;
+    margin: 140px 0 40px;
     background-image: url('../img/photo/bg_section_1.png');
     background-repeat: no-repeat;
     background-position: center center;
@@ -481,7 +485,7 @@ a{
         display: flex;
         align-items: center;
         .slick-track {
-            padding: 50px 0;
+            padding: 45px 0;
         }
       
     }
@@ -544,10 +548,7 @@ a{
     }
 }
 
-.slick-list {
-    margin: 50px 0;
-    overflow: hidden;
-}
+
 .btn {
     background: linear-gradient(181.56deg, #0066FF -8.5%, #00369C 51.46%,
      #0031C4 130.73%, #018FF6 130.74%);
@@ -594,8 +595,6 @@ a{
     background: linear-gradient(179.84deg, #F4F4F4 -0.37%, #B8B8B8 104.82%);
 }
 
-
-
 .slider-line-point {
     top: 50%;
     transform: translate(-50%, -50%);
@@ -627,6 +626,7 @@ a{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 28px;
 }
 
 .btn-wrap {
@@ -663,9 +663,20 @@ a{
     justify-content: space-between;
 }
 
-.admission-item {
+.steps-wrap{
     display: flex;
     justify-content: space-between;
+    // width: 67%;
+}
+
+.admission-item-wrap {
+    display: flex;
+    justify-content: space-between;
+}
+
+.admission-item {
+    width: 65%;
+    max-width: 730px;
 }
 
 .admission-form {
@@ -674,6 +685,10 @@ a{
     flex-direction: column;
     background: linear-gradient(132.24deg, #F4F4F4 -0.37%, #B8B8B8 104.82%);
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
+
+    &--in-block {
+        width: 33%;
+    }
 
     &__header {
         font-size: 28px;
@@ -705,12 +720,115 @@ a{
     }
 }
 
+.step-block {
+    flex-basis: 155px;
+    position: relative;
+    background: #FFFFFF;
+  
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+    
+    &__icon {
+        display: block;
+        justify-content: center;
+        margin:  0 auto 10px;
+        position: relative;
+
+    }
+    .tringle-decorate {
+        position: absolute;
+        z-index: 2;
+        left: 50%;
+        top: 0;
+        transform: translate(-50%, 0);
+        border: 55px solid transparent; border-top: 15px solid #fff;
+    }
+    &__header {
+        position: relative;
+        padding: 20px 0;
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 22px;
+        line-height: 26px;
+        text-align: center;
+        color: #FFFFFF;
+        background: linear-gradient(183.02deg, #0066FF -8.5%, #00369C 51.46%, #0031C4 130.73%, #018FF6 130.74%);
+        overflow: hidden;
+        // &::before {
+        //     position: absolute;
+        //     top: 0;
+        //     left: 50%;
+        //     transform: translate(-50%, 0);
+        //     content: "";
+        //     border: 50px solid transparent; 
+        //     border-top: 15px solid #fff;
+        // }
+
+        &::after {
+           content: "";
+    position: absolute;
+    width: 55%;
+    height: 30px;
+    left: 50%;
+    background-color: #fff;
+    border-top: 3px solid red;
+    bottom: -15px;
+    transform: rotate(-20deg);
+        }
+
+        &::before {
+            content: "";
+    position: absolute;
+    width: 55%;
+    height: 30px;
+    left: -12px;
+    background-color: #fff;
+    border-top: 3px solid red;
+    bottom: -14px;
+    transform: rotate(20deg);
+        }
+    }
+
+    &__subtitle {
+        margin: 13px 0 6px;
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 15px;
+        line-height: 18px;
+        text-align: center;
+        color: #00369C;
+    }
+
+    &__line {
+        width: 113px;
+        height: 2px;
+        margin: auto;
+        background: linear-gradient(180.36deg, #018FF6 -6.36%, #00369C 93.4%);
+        border-radius: 18.5px;
+        border: none;
+    }
+
+    &__info {
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 16px;
+        text-align: center;
+        color: #737373;
+        padding: 6px 6px 30px 6px;
+    }
+}
+
 // admission
 
 .academic-header {
     padding: 24px 0;
     background: linear-gradient(180.69deg, #0066FF -8.5%, #00369C 51.46%, #0031C4 130.73%, #018FF6 130.74%);
-
+    &__icon {
+        margin-right: 8px;
+    }
     &__title {
         font-family: Raleway;
         font-style: normal;
@@ -720,6 +838,7 @@ a{
         text-align: center;
         text-transform: uppercase;
         color: #FFFFFF;
+        margin-right: 20px;
     }
 
     &__content {
@@ -727,16 +846,31 @@ a{
         align-items: center;
 
     }
+
+
+
+}
+
+.courses {
+    margin: 35px 0 65px;
+    
+    .slick-track {
+        padding: 45px 0;
+    }
 }
 
 .academic {
-    margin-top: 20px;
     color: #FFFFFF;
     display: flex;
+    justify-content: flex-start;
     flex-direction: column;
-    align-items: center;
 
+    // align-items: center;
+
+   
+    
     &__years {
+        padding: 0 8px;
         border: 2px solid #fff;
         font-family: Raleway;
         font-style: normal;
@@ -745,15 +879,17 @@ a{
         text-transform: uppercase;
     }
 
+
     &__title {
-        margin-bottom: 20px;
         font-size: 25px;
-        line-height: 54px;
+     
         font-style: normal;
         font-weight: bold;
         letter-spacing: 0.025em;
         color: #FFFFFF;
     }
+
+   
 }
 
 .banner {
@@ -839,6 +975,11 @@ a{
 
 // gallery
 
+.gallery {
+    .slick-track {
+        padding: 40px 0 35px;
+    }
+}
 
 .gallery-slider-item {
     margin: 0px 28px;
