--- a/css/style.css
+++ b/css/style.css
@@ -130,8 +130,6 @@ a {
   position: relative;
   z-index: 2;
   font-family: Roboto;
-  background: url('../img/photo/slider\ business.png');
-  background-color: #0031C4;
   color: #FFFFFF;
 }
 .header-slider__content {
@@ -185,6 +183,13 @@ a {
   right: -115px;
   position: absolute;
 }
+.header-slider-absolute {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
 .slider-header-btn {
   background-color: transparent;
   border: none;
@@ -208,7 +213,7 @@ a {
   margin-left: -50px;
 }
 .square-decorate {
-  z-index: -1;
+  z-index: 99;
   position: absolute;
   height: 130%;
   width: 74%;
@@ -416,7 +421,7 @@ a {
   background-color: #CE0000 !important;
 }
 .slider-wrap {
-  padding: 0 132px;
+  padding: 0 6.7%;
 }
 .slider-item {
   border-radius: 12px;
@@ -471,6 +476,7 @@ a {
   line-height: 15px;
   text-align: center;
   color: #FFFFFF;
+  outline: none;
 }
 .btn--header-slider {
   padding: 7.5px 40px;
