--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,10 @@ a {
 .header-slider {
   overflow: hidden;
   position: relative;
+  background-image: url(../img/photo/computer.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
   z-index: 2;
   font-family: Roboto;
   color: #FFFFFF;
@@ -213,17 +217,26 @@ a {
   margin-left: -50px;
 }
 .square-decorate {
-  z-index: 99;
   position: absolute;
-  height: 130%;
-  width: 74%;
+  height: 150%;
+  width: 84%;
+  border-radius: 28px;
+  transform: rotate(135deg);
+  background: rgba(0, 150, 235, 0.7);
+  left: -33%;
+  top: -20%;
+}
+.square-decorate__inner {
+  position: absolute;
+  height: 93.6%;
+  width: 95%;
   background: linear-gradient(274.44deg, #0066ff -9.04%, #00369c 41.93%);
   border-radius: 28px;
-  opacity: 0.9;
-  transform: rotate(138deg);
-  border: 47px solid rgba(0, 150, 235, 0.4);
-  left: -21%;
-  top: -20%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
 }
 .social-nav {
   position: absolute;
@@ -477,6 +490,7 @@ a {
   text-align: center;
   color: #FFFFFF;
   outline: none;
+  border: none;
 }
 .btn--header-slider {
   padding: 7.5px 40px;
@@ -577,6 +591,7 @@ a {
   justify-content: space-between;
 }
 .steps-wrap {
+  margin-top: 26px;
   display: flex;
   justify-content: space-between;
 }
@@ -585,6 +600,7 @@ a {
   justify-content: space-between;
 }
 .admission-item {
+  margin-top: 36px;
   width: 65%;
   max-width: 730px;
 }
@@ -599,10 +615,9 @@ a {
   width: 33%;
 }
 .admission-form__header {
-  font-size: 28px;
+  font-size: 26px;
   line-height: 133.3%;
-  font-style: bold;
-  text-align: center;
+  font-weight: 800;
   color: #0031C4;
 }
 .admission-form__subtitle {
@@ -610,6 +625,7 @@ a {
   line-height: 12px;
   text-align: justify;
   color: #737373;
+  margin-bottom: 10px;
 }
 .admission-form__input {
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
@@ -622,6 +638,17 @@ a {
   border: none;
   outline: none;
   margin-bottom: 28px;
+}
+.admission-form__btn {
+  width: 145px;
+  margin: auto;
+  font-size: 22px;
+  padding: 8px 47px;
+  border-radius: 30px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  font-style: normal;
+  font-weight: normal;
 }
 .step-block {
   flex-basis: 155px;
@@ -709,6 +736,7 @@ a {
 }
 .academic-header {
   padding: 24px 0;
+  margin-bottom: 50px;
   background: linear-gradient(180.69deg, #0066ff -8.5%, #00369c 51.46%, #0031c4 130.73%, #018ff6 130.74%);
 }
 .academic-header__icon {
@@ -788,8 +816,10 @@ a {
   background: url('../img/photo/benefits.png');
   background-repeat: no-repeat;
   background-position: center center;
+  margin-bottom: 75px;
 }
 .benefits-items {
+  margin-top: 50px;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -849,6 +879,7 @@ a {
 .feedback-slider {
   border: 6px solid #0031C4;
   max-width: 935px;
+  margin: 0 auto;
   position: relative;
 }
 .feedback-slider .slick-list {
@@ -898,17 +929,29 @@ a {
 }
 .footer {
   background: linear-gradient(177.39deg, #0066ff -13.52%, #00318e 32.41%);
-}
-.telephones {
   position: relative;
+}
+.footer::before {
+  content: "";
+  z-index: -999999;
+  position: absolute;
+  top: -30px;
+  left: 50%;
+  transform: translate(-50%, 0);
+  width: 479.5px;
+  height: 76.58px;
   border-radius: 30px;
   padding: 12px 90px 17px;
+  background: #004ecb;
 }
-.telephones::before {
-  content: "";
-  width: 100px;
-  height: 100px;
-  background-color: red;
+.telephones {
+  top: -18px;
+  position: relative;
+  margin: 0 auto;
+  left: 50%;
+  transform: translate(-50%, 0);
+  display: inline-flex;
+  justify-content: center;
 }
 .telephones__inner {
   display: flex;
@@ -916,23 +959,30 @@ a {
   margin-left: 33px;
 }
 .telephones__link {
+  position: relative;
+  z-index: 99;
   font-size: 23px;
   color: #FFFFFF;
+}
+.telephones__icon {
+  position: relative;
+  z-index: 99;
 }
 .upBtn {
   position: sticky;
   bottom: 0;
   display: none;
   justify-content: center;
+  padding: 20px;
   cursor: pointer;
 }
 .upBtn .upArrow {
   position: relative;
   display: block;
-  margin-bottom: 20px;
   animation: animat 1s infinite;
 }
 .form-title {
+  margin-bottom: 30px;
   font-family: Roboto;
   font-style: normal;
   font-weight: bold;
@@ -957,6 +1007,30 @@ a {
   border: 1px solid #BDBDBD;
   box-sizing: border-box;
   border-radius: 30px;
+}
+.footer-form__input--name {
+  display: block;
+  flex-basis: 235px;
+  width: 235px;
+}
+.footer-form__input--country {
+  flex-basis: 125px;
+  width: 125px;
+}
+.footer-form__input--phone {
+  flex-basis: 195px;
+  width: 195px;
+}
+.footer-form__input--email {
+  flex-basis: 216px;
+  width: 216px;
+}
+.footer-form__btn {
+  padding: 8px 45px;
+  border-radius: 30px;
+  background: linear-gradient(185.19deg, #ff0000 9.11%, #ce0000 98.12%);
+  font-style: normal;
+  font-size: 22px;
 }
 .footer-items {
   display: flex;
