--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,11 @@ body {
 ul {
   list-style: none;
 }
+input,
+button {
+  outline: none;
+  border: none;
+}
 .container {
   max-width: 1080px;
   width: 90%;
@@ -128,13 +133,20 @@ a {
 .header-slider {
   overflow: hidden;
   position: relative;
-  background-image: url(../img/photo/computer.png);
+  background-image: url(../img/photo/slider\ business.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
   z-index: 2;
   font-family: Roboto;
   color: #FFFFFF;
+  border-bottom: 5px solid #B8B8B8;
+}
+.header-slider .arrow-decorate {
+  position: absolute;
+  top: -60px;
+  left: 20px;
+  z-index: 1;
 }
 .header-slider__content {
   position: relative;
@@ -187,6 +199,23 @@ a {
   right: -115px;
   position: absolute;
 }
+.square-decorate {
+  position: absolute;
+  width: 403.12px;
+  height: 403.12px;
+  left: -401.88px;
+  top: 671.09px;
+  /* Linear */
+  background: linear-gradient(206.74deg, #ff0000 9.11%, #ce0000 98.12%);
+  /* 1 */
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 28px;
+  transform: matrix(0.71, -0.69, 0.72, 0.71, 0, 0);
+}
+.square-decorate--transparent {
+  background: transparent;
+  border: 3px solid #B8B8B8;
+}
 .header-slider-absolute {
   position: absolute;
   top: 0;
@@ -212,11 +241,12 @@ a {
   font-size: 27px;
   margin-left: -1px;
   color: #FFFFFF;
+  opacity: 1 !important;
 }
 .header-subtitle-decorate {
   margin-left: -50px;
 }
-.square-decorate {
+.rectangle-decorate {
   position: absolute;
   height: 150%;
   width: 84%;
@@ -226,7 +256,7 @@ a {
   left: -33%;
   top: -20%;
 }
-.square-decorate__inner {
+.rectangle-decorate__inner {
   position: absolute;
   height: 93.6%;
   width: 95%;
@@ -237,6 +267,12 @@ a {
   right: 0;
   bottom: 0;
   margin: auto;
+}
+.rectangle-decorate .arrow-decorate {
+  position: absolute;
+  top: -3%;
+  left: 5%;
+  transform: rotate(224deg);
 }
 .social-nav {
   position: absolute;
@@ -418,10 +454,21 @@ a {
   height: 12px;
 }
 .universities {
+  position: relative;
   margin: 140px 0 40px;
   background-image: url('../img/photo/bg_section_1.png');
   background-repeat: no-repeat;
   background-position: center center;
+}
+.universities .square-decorate {
+  top: -65%;
+  z-index: 2;
+  left: -18%;
+}
+.universities .square-decorate--transparent {
+  top: -65%;
+  z-index: 2;
+  left: -13%;
 }
 .universities__slider {
   display: flex;
@@ -735,9 +782,15 @@ a {
   padding: 6px 6px 30px 6px;
 }
 .academic-header {
+  position: relative;
   padding: 24px 0;
   margin-bottom: 50px;
   background: linear-gradient(180.69deg, #0066ff -8.5%, #00369c 51.46%, #0031c4 130.73%, #018ff6 130.74%);
+}
+.academic-header .arrow-decorate {
+  position: absolute;
+  left: 61px;
+  top: -134px;
 }
 .academic-header__icon {
   margin-right: 8px;
@@ -813,10 +866,17 @@ a {
   border: 3px solid #00369C;
 }
 .benefits {
+  position: relative;
   background: url('../img/photo/benefits.png');
   background-repeat: no-repeat;
   background-position: center center;
   margin-bottom: 75px;
+}
+.benefits .arrow-decorate {
+  position: absolute;
+  bottom: 0;
+  left: 6.25%;
+  z-index: 2;
 }
 .benefits-items {
   margin-top: 50px;
@@ -1007,6 +1067,8 @@ a {
   border: 1px solid #BDBDBD;
   box-sizing: border-box;
   border-radius: 30px;
+  outline: none;
+  border: none;
 }
 .footer-form__input--name {
   display: block;
