--- a/less/style.less
+++ b/less/style.less
@@ -13,6 +13,13 @@ ul{
     list-style: none;
 }
 
+input,
+button {
+    outline: none;
+    border: none;
+}
+
+
 .container{
     max-width: 1080px;
     width: 90%;
@@ -67,13 +74,6 @@ a{
 }
 
 
-// .header-slider {
-//     position: relative;
-//     font-family: Roboto;
-//     background-image: url('../img/photo/pictures_slider.png');
-//     height: 800px;
-//     background-color: #0031C4;
-// }
 
 .navigation {
     display: flex;
@@ -160,13 +160,23 @@ a{
 .header-slider {
     overflow: hidden;
     position: relative;
-    background-image: url(../img/photo/computer.png);
+    background-image: url(../img/photo/slider\ business.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
     z-index: 2;
     font-family: Roboto;
     color: #FFFFFF;
+    border-bottom: 5px solid #B8B8B8;
+
+    .arrow-decorate {
+        position: absolute;
+        top: -60px;
+        left: 20px;
+        z-index: 1;
+    }
+
+    
     
     &__content {
         position: relative;
@@ -230,6 +240,31 @@ a{
 }
 
 
+.square-decorate {
+    position: absolute;
+    width: 403.12px;
+    height: 403.12px;
+    left: -401.88px;
+    top: 671.09px;
+
+    /* Linear */
+
+    background: linear-gradient(206.74deg, #FF0000 9.11%, #CE0000 98.12%);
+/* 1 */
+
+box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+border-radius: 28px;
+transform: matrix(0.71, -0.69, 0.72, 0.71, 0, 0);
+
+&--transparent {
+    background: transparent;
+    border: 3px solid #B8B8B8;
+}
+}
+
+
+
+
 .header-slider-absolute {
     position: absolute;
     top: 0;
@@ -257,13 +292,14 @@ a{
     font-size: 27px;
     margin-left: -1px;
     color: #FFFFFF;
+    opacity: 1 !important; // try to fix that
 }
 
 .header-subtitle-decorate {
     margin-left: -50px;
 }
 
-.square-decorate {
+.rectangle-decorate {
     // z-index: 99;
     position: absolute;
     height: 150%;
@@ -294,7 +330,14 @@ a{
         // left: -21%;
         // top: -20%;
     }
+    .arrow-decorate {
+        position: absolute;
+        top: -3%;
+        left: 5%;
+        transform: rotate(224deg);    }
 }
+
+
 
 
 .social-nav {
@@ -505,10 +548,24 @@ a{
     }
 
 .universities {
+    position: relative;
     margin: 140px 0 40px;
     background-image: url('../img/photo/bg_section_1.png');
     background-repeat: no-repeat;
     background-position: center center;
+
+    .square-decorate {
+        top: -65%;
+        z-index: 2;
+        left: -18%;
+    
+        &--transparent {
+            top: -65%;
+            z-index: 2;
+            left: -13%;
+
+        }
+        }
 
     &__slider {
         display: flex;
@@ -688,6 +745,7 @@ a{
     display: flex;
    
 }
+
 
 .admission-block-wrap {
     display: flex;
@@ -871,9 +929,15 @@ a{
 // admission
 
 .academic-header {
+    position: relative;
     padding: 24px 0;
     margin-bottom: 50px;
     background: linear-gradient(180.69deg, #0066FF -8.5%, #00369C 51.46%, #0031C4 130.73%, #018FF6 130.74%);
+    .arrow-decorate {
+        position: absolute;
+        left: 61px;
+        top: -134px;
+    }
     &__icon {
         margin-right: 8px;
     }
@@ -972,10 +1036,18 @@ a{
 // benefits
 
 .benefits {
+    position: relative;
     background: url('../img/photo/benefits.png');
     background-repeat: no-repeat;
     background-position: center center;
     margin-bottom: 75px;
+
+    .arrow-decorate {
+        position: absolute;
+        bottom: 0;
+        left: 6.25%;
+        z-index: 2;
+    }
 }
 
 .benefits-items {
@@ -1236,6 +1308,8 @@ background: #004ecb;
         border: 1px solid #BDBDBD;
         box-sizing: border-box;
         border-radius: 30px; 
+        outline: none;
+        border: none;
 
         &--name {
             display: block;
