--- a/less/style.less
+++ b/less/style.less
@@ -188,6 +188,18 @@ border-radius: 28px;
     }
 }
 
+.adaptive-menu {
+
+   position: absolute;
+   padding: 10px 35px;
+   width: 63.47%;
+//    height: 759px;
+   left: 0;
+   top: 0;
+   
+   background: linear-gradient(189.54deg, #0066FF -8.5%, #0041BE 51.46%, #0031C4 130.73%, #018FF6 130.74%);
+   opacity: 0.88; 
+}
 .header-slider {
     overflow: hidden;
     position: relative;
