--- a/less/style.less
+++ b/less/style.less
@@ -117,8 +117,18 @@ border-radius: 28px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    &-tablet {
+        display: flex;
+    }
     &__item {
         display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        margin-bottom: 38px;
+        font-size: 13px;
+        white-space: nowrap;
+        
     }
 
     .connection-info__btn {
@@ -128,7 +138,6 @@ border-radius: 28px;
         border-radius: 30px;
         font-weight: bold;
         font-size: 20px;
-       
     }
 }
 
@@ -168,6 +177,9 @@ border-radius: 28px;
     display: flex;
     align-items: center;
 
+    &--tablet {
+        margin-right: 22px;
+    }
     &--phones {
         margin-right: 38px;
     }
@@ -188,25 +200,156 @@ border-radius: 28px;
     }
 }
 
-.adaptive-menu {
+details > summary::-webkit-details-marker { display: none; }
+summary {
+    cursor: pointer;
+}
 
+.adaptive-menu {
+    
    position: absolute;
    padding: 10px 35px;
-   width: 63.47%;
-//    height: 759px;
+   width: 80%;
+   max-width: 650px;
    left: 0;
    top: 0;
+   font-family: Roboto;
+   color: #FFFFFF;
+   background: rgba(0, 102, 255, 0.88);
+display: none;
+
+   &__info {
+    font-size: 16px;
+    line-height: 19px;
+    letter-spacing: -0.02em;
+    padding-bottom: 30px;
+    border-bottom: 2px solid #fff;
+    margin-bottom: 30px;
+   }
+    ul {
+        transition: 0.3s;
+    }
+   .drop-down {
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 20px;
+        color: #FFFFFF;
+        margin-bottom: 10px;
+    &__header {
+        display: flex;
+        justify-content: space-between;
+        width: 210px;
+    }
+
    
-   background: linear-gradient(189.54deg, #0066FF -8.5%, #0041BE 51.46%, #0031C4 130.73%, #018FF6 130.74%);
-   opacity: 0.88; 
+   }
+
+   summary {
+        width: 210px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        outline: none;
+        border: none;
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 20px;
+        color: #FFFFFF;
+    }
+
+    summary {
+        display: flex;
+        flex-direction: column;
+        text-align: left;
+    }
 }
+
+.adaptive-header {
+    &__inner {
+        &--tablet {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            a {
+                color: #00369C 
+            }
+        }
+    }
+}
+
+.drop-down {
+    &__line {
+        width: 78%;
+        height: 2px;
+        background-color: #fff;
+        margin-right: auto;
+        border: none;
+    }
+
+    &__item {
+        margin: 8px 0;
+    }
+
+    &__link {
+        font-size: 16px;
+        color: #FFFFFF;
+    }
+
+    &__link-icon {
+        margin-right: 5px;
+    }
+
+    &__line-small {
+        border: none;
+        width: 40px;
+        height: 2px;
+        background-color: #fff;
+    }
+}
+
+.navigation-menu {
+    font-family: Roboto;
+
+    &__wrap {
+        margin-top: 15px;
+    }
+    
+    &__title {
+        display: inline;
+        font-size: 26px;
+        text-transform: uppercase;
+        color: #fff;
+        border-bottom: 2px solid #fff;
+    }
+
+    &__drop-down {
+        margin-bottom: 10px;
+    }
+}
+
+.social-links-list {
+    display: flex;
+    justify-content: flex-end;
+    
+    &--mobile {
+        margin-right: 23%;
+        margin-bottom: 43px;
+    }
+}
+
+.social-links-item {
+    margin: 0px 5px;
+}
+
 .header-slider {
     overflow: hidden;
     position: relative;
-    // background-image: url(../img/photo/slider\ business.png);
-    // background-repeat: no-repeat;
-    // background-size: cover;
-    // background-position: center center;
+    background-image: url(../img/photo/slider\ business.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center 40%;
     z-index: 2;
     font-family: Roboto;
     color: #FFFFFF;
@@ -215,6 +358,7 @@ border-radius: 28px;
     &__img-wrap {
         height: 100%;
     }
+
     .arrow-decorate {
         position: absolute;
         top: -60px;
@@ -225,8 +369,6 @@ border-radius: 28px;
             top: -138px;
         }
     }
-
-    
     
     &__content {
         position: relative;
@@ -278,7 +420,6 @@ border-radius: 28px;
             display: block;
             padding: 12px 18px;
             text-align: center;
-
         }
     }
 
@@ -296,20 +437,15 @@ border-radius: 28px;
     height: 403.12px;
     left: -401.88px;
     top: 671.09px;
-
-    /* Linear */
-
     background: linear-gradient(206.74deg, #FF0000 9.11%, #CE0000 98.12%);
-/* 1 */
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 28px;
+    transform: matrix(0.71, -0.69, 0.72, 0.71, 0, 0);
 
-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
-border-radius: 28px;
-transform: matrix(0.71, -0.69, 0.72, 0.71, 0, 0);
-
-&--transparent {
-    background: transparent;
-    border: 3px solid #B8B8B8;
-}
+    &--transparent {
+        background: transparent;
+        border: 3px solid #B8B8B8;
+    }
 }
 
 
@@ -669,6 +805,7 @@ transform: matrix(0.71, -0.69, 0.72, 0.71, 0, 0);
     display: flex;
     justify-content: space-between;
     li {
+        margin-top: -2px;
         width: 7px;
         height: 7px;
         border-radius: 50%;
@@ -1072,18 +1209,19 @@ transform: matrix(0.71, -0.69, 0.72, 0.71, 0, 0);
         justify-content: space-between;
         align-items: center;
         li {
+            margin-top: -2px;
             width: 7px;
             height: 7px;
             border-radius: 50%;
             background: linear-gradient(188.21deg, #0066FF -8.5%, #00369C 51.46%,
              #0031C4 130.73%, #018FF6 130.74%);
-          
         }
         .slick-active {
             width: 9px;
-         height: 9px;
-         background: linear-gradient(207.28deg, #FF0000 9.11%, #CE0000 98.12%);
+            height: 9px;
+            background: linear-gradient(207.28deg, #FF0000 9.11%, #CE0000 98.12%);
         }
+
         button {
             display: none;
         }
@@ -1221,6 +1359,29 @@ transform: matrix(0.71, -0.69, 0.72, 0.71, 0, 0);
     .slick-track {
         padding: 40px 0 35px;
     }
+    
+.slick-dots {
+    display: flex;
+    justify-content: space-between;
+    li {
+        margin-top: -2px;
+        width: 7px;
+        height: 7px;
+        border-radius: 50%;
+        background: linear-gradient(188.21deg, #0066FF -8.5%, #00369C 51.46%,
+         #0031C4 130.73%, #018FF6 130.74%);
+      
+    }
+    .slick-active {
+        width: 9px;
+     height: 9px;
+     background: linear-gradient(207.28deg, #FF0000 9.11%, #CE0000 98.12%);
+    }
+    button {
+        display: none;
+    }
+
+}
 }
 
 .gallery-slider-item {
